openshadinglanguage-git/0-OLDs/0-Test-Compil-1.8.10-AVEC-LLVM-5.0.0/0-Erreurs-compile.TXT


/build/openshadinglanguage-git/src/OpenShadingLanguage-Release-1.8.10/src/liboslexec/llvm_util.cpp: In member function ‘virtual void OSL::pvt::LLVM_Util::MemoryManager::deregisterEHFrames(uint8_t*, uint64_t, size_t)’:
/build/openshadinglanguage-git/src/OpenShadingLanguage-Release-1.8.10/src/liboslexec/llvm_util.cpp:288:52: error: no matching function for call to ‘llvm::SectionMemoryManager::deregisterEHFrames(uint8_t*&, uint64_t&, size_t&)’
         mm->deregisterEHFrames(Addr, LoadAddr, Size);
                                                    ^


In file included from /build/openshadinglanguage-git/src/OpenShadingLanguage-Release-1.8.10/src/liboslexec/llvm_util.cpp:52:0:
/usr/include/llvm/IR/Module.h: In instantiation of ‘llvm::Constant* llvm::Module::getOrInsertFunction(llvm::StringRef, llvm::AttributeList, llvm::Type*, ArgsTy ...) [with ArgsTy = {llvm::Type*, llvm::Type*, llvm::Type*, llvm::Type*, long int}]’:
/usr/include/llvm/IR/Module.h:353:69:   required from ‘llvm::Constant* llvm::Module::getOrInsertFunction(llvm::StringRef, llvm::Type*, ArgsTy ...) [with ArgsTy = {llvm::Type*, llvm::Type*, llvm::Type*, llvm::Type*, long int}]’
/build/openshadinglanguage-git/src/OpenShadingLanguage-Release-1.8.10/src/liboslexec/llvm_util.cpp:863:68:   required from here
/usr/include/llvm/IR/Module.h:344:43: error: no matching function for call to ‘llvm::SmallVector<llvm::Type*, 5>::SmallVector(<brace-enclosed initializer list>)’
     SmallVector<Type*, sizeof...(ArgsTy)> ArgTys{Args...};
                                           ^~~~~~

make[2]: *** [src/liboslexec/CMakeFiles/oslexec.dir/build.make:808: src/liboslexec/CMakeFiles/oslexec.dir/llvm_util.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....


make[1]: *** [CMakeFiles/Makefile2:1129: src/liboslexec/CMakeFiles/oslexec.dir/all] Error 2
make: *** [Makefile:163: all] Error 2
